fixed homepage title falling off screen on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2120,7 +2120,7 @@ input, select, textarea {
 			}
 
 				.main.style1 h2 {
-					font-size: 2.5em;
+					font-size: 10vw;
 				}
 
 			.main.style2 {
